@@ -28,6 +28,7 @@ class Order(object):
         self.status = None
         self.date = None
         self.total = None
+        self.vat_amount = None
         self.title = None
 
         self.customer_title = None
@@ -78,6 +79,8 @@ class CartItems(object):
         self.total = None
         self.supplier_name = None
         self.supplier_email = None
+        self.vat_rate = None
+        self.vat_amount = None
 
         self.order = None
 
@@ -148,6 +151,7 @@ class BTreeOrderStorage(Persistent):
 
         # store cart in order
         all_cart_items = []
+        vat_amount_total = Decimal('0.0')
         for key in cart_data.keys():
             cart_items = CartItems()
             cart_items.sku_code = cart_data[key]['skucode']
@@ -158,11 +162,16 @@ class BTreeOrderStorage(Persistent):
             cart_items.total = Decimal(cart_data[key]['total'])
             cart_items.supplier_name = cart_data[key]['supplier_name']
             cart_items.supplier_email = cart_data[key]['supplier_email']
+            cart_items.vat_rate = cart_data[key]['vat_rate']
+            cart_items.vat_amount = Decimal(cart_data[key]['vat_amount'])
             cart_items.order_id = order_id
             cart_items.order = new_order
+
             all_cart_items.append(cart_items)
+            vat_amount_total += cart_items.vat_amount
 
         new_order.cartitems = all_cart_items
+        new_order.vat_amount = vat_amount_total
         return order_id
 
     def cancelOrder(self, order_id):
